stylesheet/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

header, .section-one, footer {
  background-color: #1F2937;
}

header {
  width: 100%;
  padding: 30px;
}

header nav {
  display: flex;
  justify-content: space-between;
}

header, .section-one {
  font-family: Roboto;
}

.logo {
  margin-left: 140px;
}

.logo h3 {
  font-size: 24px;
  color: #F9FAF8;
}

.links {
  margin-right: 160px;
}

.links a {
  font-size: 18px;
  color: #E5E7EB;
  text-decoration: none;
  margin-left: 15px;
}

.section-padding {
  padding: 100px 40px;
}

.section-one {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.main-text {
  width: 400px;
}

.main-text h1 {
  font-size: 48px;
  font-weight: 900;
  color: #F9FAF8;
}

.main-text p {
  font-size: 18px;
  color: #E5E7EB;
}

.main-text button {
  background-color: #3882F6;
  color: #F9FAF8;
  transition: opacity 0.3s;
}

.button-small {
  padding: 7px 30px;
  font-size: 18px;
  border-radius: 8px;
  border-style: none;
  opacity: 0.9;
}

.button-small:hover {
  opacity: 1.0;
}

.img-container {
  width: 500px;
}

.img-container img {
  border-radius: 15px;
  width: 100%;
}

.section-two {
  background-color: #F9FAF8;
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.section-two-header {
  text-align: center;
  font-family: Roboto;
  font-size: 20px;
  font-weight: 900;
  color: #1F2937;
}

.section-two-cards {
  display: flex;
  justify-content: center;
  gap: 30px;
}

.cards {
  width: 170px;
  height: 200px;
}

.card-img-container {
  width: 100%;
  height: 75%;
  border: 3px solid #3882F6;
  border-radius: 20px;
}

.cards p {
  text-align: center;
  padding: 10px 1px;
}

.section-three {
  background-color: #E5E7EB;
  padding: 150px;
}

.section-quote {
  font-family: Roboto;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.quote {
  font-size: 25px;
  font-style: italic;
  font-weight: lighter;
}

.quote-author {
  align-self: flex-end;
  font-size: 20px;
}

.section-four {
  background-color: #F9FAF8;
  display: flex;
  justify-content: center;
  font-family: Roboto;
}

.sign-up-container {
  background-color: #3882F6;
  width: 900px;
  padding: 50px 90px;
  border-radius: 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.sign-up-text {
  line-height: 10px;
}

.sign-up-text h6 {
  font-size: 20px;
  color:#F9FAF8;
}

.sign-up-text p {
  font-size: 16px;
  color: #E5E7EB; 
}

.sign-up-button {
  border: 2px solid #F9FAF8;
  background-color: transparent;
  color: #F9FAF8;
}

